--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -42,11 +42,13 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+      - name: Build jupyter
+        run: pip3 install --upgrade jupyter
+	env:
+	  JEKYLL_ENV: production
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: |
-	  pip3 install --upgrade jupyter
-	  bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
