--- a/.github/workflows/jekyll-github-pages.yml
+++ b/.github/workflows/jekyll-github-pages.yml
@@ -2,11 +2,14 @@ name: Build and Deploy a Jekyll Site to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["master"]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents:read
+  contents: read
   pages: write
   id-token: write
 
