--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -27,3 +27,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup ruby
+        uses: ruby/setup-ruby
+	with:
+	  ruby-version: '3.3'
