YAML is the bane of my existence.

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,4 +33,4 @@ jobs:
           ruby-version: '3.3'
           bundler-cache: true
       - name: Setup jupiter
-        run: pip3 install --upgrade jupyter
+        run: brew install jupyter
