YAML is the bane of my existence.

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,4 +33,10 @@ jobs:
           ruby-version: '3.3'
           bundler-cache: true
       - name: Setup jupiter
-        run: brew install jupyter
+        run: brew install jupyterlab
+        env:
+          JEKYLL_ENV: production
+      - name: Build with Jekyll
+        run: bundle exec jekyll build
+        env:
+          JEKYLL_ENV: production
