--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,7 +39,9 @@ jobs:
       - name: Setup imagemagick
         run: brew install imagemagick
         env:
-          JEKYLL_ENV: production	
+          JEKYLL_ENV: production
+      - name: Test jekyll versin
+        run: jekyll --version
       - name: Build with Jekyll
         run: bundle exec jekyll build
         env:
