--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -8,8 +8,8 @@ name: Deploy Jekyll site to Pages
 
 on:
   # Runs on pushes targeting the default branch
-#  push:
-#    branches: ["master"]
+  push:
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -32,15 +32,17 @@ jobs:
         with:
           ruby-version: '3.3'
           bundler-cache: true
-      - name: Setup jupiter
-        run: brew install jupyterlab
-        env:
-          JEKYLL_ENV: production
-      - name: Setup imagemagick
-        run: brew install imagemagick
-        env:
-          JEKYLL_ENV: production
-      - name: Build with Jekyll
-        run: bundle exec jekyll build
-        env:
-          JEKYLL_ENV: production
+      - name: Check Jekyll version
+        run: bundle exec jekyll --version
+#      - name: Setup jupiter
+#        run: brew install jupyterlab
+#        env:
+#          JEKYLL_ENV: production
+#      - name: Setup imagemagick
+#        run: brew install imagemagick
+#        env:
+#          JEKYLL_ENV: production
+#      - name: Build with Jekyll
+#        run: bundle exec jekyll build
+#        env:
+#          JEKYLL_ENV: production
