--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -38,11 +38,11 @@ jobs:
 #        run: brew install jupyterlab
 #        env:
 #          JEKYLL_ENV: production
-#      - name: Setup imagemagick
-#        run: brew install imagemagick
-#        env:
-#          JEKYLL_ENV: production
-#      - name: Build with Jekyll
-#        run: bundle exec jekyll build
-#        env:
-#          JEKYLL_ENV: production
+      - name: Setup imagemagick
+        run: brew install imagemagick
+        env:
+          JEKYLL_ENV: production
+      - name: Build with Jekyll
+        run: bundle exec jekyll build
+        env:
+          JEKYLL_ENV: production
