Added bundle install before bundle exec jekyll build.  Maybe this fixed the problem?

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -32,6 +32,8 @@ jobs:
         with:
           ruby-version: '3.3'
           bundler-cache: true
+      - name: Bundle
+        run: bundle install
       - name: Check Jekyll version
         run: bundle exec jekyll --version
 #      - name: Setup jupiter
