Added deploy action to CLI to see if I can manually deploy via ssh.

--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -6,5 +6,6 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/deploy-pages@v4      
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
