--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -1,6 +1,10 @@
 name: CI
 on:
   workflow_dispatch:
+permissions:
+  contents: read
+  pages: write
+  id-token: write  
 jobs:
   build:
     runs-on: macos-latest
