--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -8,8 +8,8 @@ name: Deploy Jekyll site to Pages
 
 on:
   # Runs on pushes targeting the default branch
-  push:
-    branches: ["master"]
+#  push:
+#    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,15 +31,18 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.3'
-      - name: Bundle
+      - name: Install Gems
         run: bundle install
       - name: Check Jekyll version
-        run: bundle exec jekyll --version
+        run: jekyll --version
 #      - name: Setup jupiter
 #        run: brew install jupyterlab
 #        env:
 #          JEKYLL_ENV: production
-      - name: Setup imagemagick
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
+      - name: Install imagemagick
         run: brew install imagemagick
         env:
           JEKYLL_ENV: production
