--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -42,10 +42,10 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-      - name: Install imagemagick
-        run: brew install imagemagick
-        env:
-          JEKYLL_ENV: production
+#      - name: Install imagemagick
+#        run: brew install imagemagick
+#        env:
+#          JEKYLL_ENV: production
       - name: Build with Jekyll
         run: bundle exec jekyll build --trace
         env:
