--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -34,8 +34,8 @@ jobs:
 	  cached: true
 #      - name: Install Gems
 #        run: bundle install
-      - name: Check Jekyll version
-        run: jekyll --version
+#      - name: Check Jekyll version
+#        run: jekyll --version
 #      - name: Setup jupiter
 #        run: brew install jupyterlab
 #        env:
