--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: '3.3.4'
       - name: Install Gems
         run: bundle install
 #      - name: Check Jekyll version
@@ -47,6 +47,6 @@ jobs:
 #        env:
 #          JEKYLL_ENV: production
       - name: Build with Jekyll
-        run: bundle exec jekyll build --trace
+        run: jekyll build --trace
         env:
           JEKYLL_ENV: production
