Added course websites for 490/587.

--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -1,3 +1,27 @@
+- course_number: 490/587
+  crn: 'Math 490'
+  year: 2025
+  semester: Spring
+  meetings:
+    - day: 'TBA'
+      time: 'TBA'
+  location: 'TBA'
+  syllabus_override: 'https://www.blakefarman.phd/syllabi/syllabi/490/S25/syllabus.html'
+  syllabus_override_url_absolute: true
+  schedule: 'https://www.blakefarman.phd/syllabi/schedules/490/S25/schedule.html'
+  schedule_url_absolute: true
+- course_number: 490/587
+  crn: 'Math 587'
+  year: 2025
+  semester: Spring
+  meetings:
+    - day: 'TBA'
+      time: 'TBA'
+  location: 'TBA'
+  syllabus_override: 'https://www.blakefarman.phd/syllabi/syllabi/587/S25/syllabus.html'
+  syllabus_override_url_absolute: true
+  schedule: 'https://www.blakefarman.phd/syllabi/schedules/587/S25/schedule.html'
+  schedule_url_absolute: true  
 - course_number: 308
   crn: '001'
   year: 2025
