--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -36,16 +36,31 @@
   contents:
     - title: Assistant Professor
       institution: Louisiana Tech University
+      location: Ruston, LA
       year: 2024 - Present
     - title: Assistant Professor
       institution: University of Louisiana At Monroe
+      location: Monroe, LA
       year: 2020 - 2024
     - title: Capital One Endowed Professorship in Mathematics
       institution: University of Louisiana At Monroe
+      location: Monroe, LA
       year: 2020 - 2023  
     - title: Visiting Assistant Professor
-      institution: Lafayette College, Easton, Pennsylvania, USA
+      institution: Lafayette College
+      location: Easton, PA
       year: 2018 - 2020
+- title: Leadership and Governance
+  type: time_table
+  contents:
+    - title: Membership Outreach Director (Officer)
+      institution: Friends of Black Bayou, Black Bayou National Wildlife Refuge
+      location: Monroe, LA
+      year: 2025 - Present
+    - title: Director at Large
+      institution: Friends of Black Bayou, Black Bayou National Wildlife Refuge
+      location: Monroe, LA
+      year: 2024 - 2025
 - title: Honors and Awards
   type: time_table
   contents:
