--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -3,24 +3,24 @@
   year: 2025
   semester: Spring
   meetings:
-    - day: 'TBA'
-      time: 'TBA'
-  location: 'TBA'
+    - day: 'Monday/Wednesday/Friday'
+      time: '11:00 AM - 12:15 PM'
+  location: 'Nethken 153'
   syllabus_override: 'https://www.blakefarman.phd/syllabi/syllabi/490/S25/syllabus.html'
   syllabus_override_url_absolute: true
-  schedule: 'https://www.blakefarman.phd/syllabi/schedules/490/S25/schedule.html'
+  schedule: 'https://www.blakefarman.phd/syllabi/schedules/lean/S25/schedule.html'
   schedule_url_absolute: true
 - course_number: 490/587
   crn: 'Math 587'
   year: 2025
   semester: Spring
   meetings:
-    - day: 'TBA'
-      time: 'TBA'
-  location: 'TBA'
+    - day: 'Monday/Wednesday/Friday'
+      time: '11:00 AM - 12:15 PM'
+  location: 'Nethken 153'
   syllabus_override: 'https://www.blakefarman.phd/syllabi/syllabi/587/S25/syllabus.html'
   syllabus_override_url_absolute: true
-  schedule: 'https://www.blakefarman.phd/syllabi/schedules/587/S25/schedule.html'
+  schedule: 'https://www.blakefarman.phd/syllabi/schedules/lean/S25/schedule.html'
   schedule_url_absolute: true  
 - course_number: 308
   crn: '001'
