Missed some pieces in the merge. Oops.

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -12,21 +12,21 @@ arxiv_id: farman_b_1# your arXiv author ID
 cv_pdf: assets/pdf/CV-BFarman.pdf # path to your CV PDF file
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: you@example.com # your email address
+email: bfarman@latech.edu # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
 github_username: farmanb # your GitHub user name
 # gitlab_username: # your GitLab user name
 # hal_id: # your HAL id (https://hal.science/)
 # ieee_id: # your ieeexplore.ieee.org/author/id
-inspirehep_id: 1010907 # Inspire HEP author ID
+# inspirehep_id: 1010907 # Inspire HEP author ID
 # instagram_id: # your instagram id
 # kaggle_id: # your kaggle id
 # keybase_username: # your keybase user name
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-# linkedin_username: blake-farman # your LinkedIn user name
+linkedin_username: blake-farman # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 orcid_id: 0000-0002-3624-837X # your ORCID ID
