--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,12 +1,13 @@
+---
 "Ballard":
   - firstname: ["Ballard", "M.", "M. B.", "Matthew Ballard"]
-    url: https://www.matthewrobertballard.com
+    url: 'https://www.matthewrobertballard.com'
 "Clifton":
   - firstname: ["Clifton", "A.", "A. C.", "Ann Clifton"]
-    url: https://coes.latech.edu/facultystaff-directory/single-entry/name/ann-clifton-1/
+    url: 'https://coes.latech.edu/facultystaff-directory/single-entry/name/ann-clifton-1/'
 "Long":
   - firstname: ["Long", "W.", "W. L.", "William Long"]
-    url: https://education.latech.edu/about/faculty-staff/faculty-directory/single-entry/name/william-long/
+    url: 'https://education.latech.edu/about/faculty-staff/faculty-directory/single-entry/name/william-long/'
 "Corbett Cruse":
   - firstname: ["Corbett Cruse", "K.", "K. C.", "Krystal Corbett Cruse"]
-    url: https://www.latech.edu/faculty-staff/single-entry/name/krystal-corbett/
+    url: 'https://www.latech.edu/faculty-staff/single-entry/name/krystal-corbett/'
