--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,3 +1,4 @@
+---
 - title: General Information
   type: map
   contents:
@@ -30,10 +31,10 @@
       location: Troy, NY
       year: 2009
       description:
-      - title: Minors
-        contents:
-         - Applied Mathematics
-         - French
+        - title: Minors
+          contents:
+            - Applied Mathematics
+            - French
 - title: Appointments
   type: time_table
   contents:
@@ -48,7 +49,7 @@
     - title: Capital One Endowed Professorship in Mathematics
       institution: University of Louisiana At Monroe
       location: Monroe, LA
-      year: 2020 - 2023  
+      year: 2020 - 2023
     - title: Visiting Assistant Professor
       institution: Lafayette College
       location: Easton, PA
@@ -58,7 +59,7 @@
   contents:
     - title: Communication Coordinator (Officer)
       institution: Louisiana Mississippi Section, Mathematical Association of America
-      location : LA/MS
+      location: LA/MS
       year: 2025 - Present
     - title: Membership Outreach Director (Officer)
       institution: Friends of Black Bayou, Black Bayou National Wildlife Refuge
@@ -72,8 +73,8 @@
   type: time_table
   contents:
     - year: 2022
-      items: 
-        - Project NExT Fellow (Red '22)
+      items:
+        - Project NExT Fellow (Red \'22)
 - title: Funding
   type: time_table
   contents:
@@ -81,20 +82,20 @@
       institution: Louisiana Board of Regents Support Fund
       year: June 2025
       description:
-       - Departmental Enhancement Grant to establish a dedicated research collaboration lab within the Mathematics and Statistics program at Louisiana Tech University.
+        - Departmental Enhancement Grant to establish a dedicated research collaboration lab within the Mathematics and Statistics program at Louisiana Tech University.
     - title: Student Activity Enhancement Fee ($2,000)
       institution: Student Development, University of Louisiana at Monroe
       year: February 2024
       description:
-       - Funded trip for ULM students to attend the annual meeting of the Louisiana-Mississippi section of the Mathematical Association of America.
+        - Funded trip for ULM students to attend the annual meeting of the Louisiana-Mississippi section of the Mathematical Association of America.
     - title: Capital One Endowed Professorship in Mathematics ($5370)
-      institution: University of Louisiana at Monroe 
+      institution: University of Louisiana at Monroe
       year: AY 22-23
     - title: Capital One Endowed Professorship in Mathematics ($5070)
-      institution: University of Louisiana at Monroe     
+      institution: University of Louisiana at Monroe
       year: AY 21-22
     - title: Capital One Endowed Professorship in Mathematics ($4790)
-      institution: University of Louisiana at Monroe     
+      institution: University of Louisiana at Monroe
       year: AY 20-21
 - title: Graduate Mentoring and Research Supervision
   type: time_table
@@ -122,7 +123,7 @@
   type: time_table
   contents:
     - title: "Mathematics Research Community"
-      institution: American Mathematical Society    
+      institution: American Mathematical Society
       location: Java, NY
       year: 2023
       description: "Derived Categories, Arithmetic and Geometry"
@@ -131,9 +132,8 @@
       location: "Lake Charles, LA"
       year: 2023
     - title: "MathFest"
-      institution: Mathematical Association of America 
+      institution: Mathematical Association of America
       location: "Tampa, FL"
-      description: "Project NExT"
       year: 2023
       description: "Project NExT"
     - title: "Joint Mathematics Meetings"
