--- a/_config.yml
+++ b/_config.yml
@@ -270,6 +270,8 @@ defaults:
 sass:
   style: compressed
   quiet_deps: true
+  silence_deprecations:
+    - import
 
 # -----------------------------------------------------------------------------
 # Jekyll Minifier
